# planner

./: .codex  .gitignore  ANALYSIS_RESULTS.md  APPS_FACTORY_README.md  CURSOR_PLAN.md  DAILY_INGESTION_SETUP.md  DEV_ERGONOMICS_REPORT.md  FACETS_MAPPER_IMPLEMENTATION.md  FETCHERS_README.md  FOUNDATION_SKELETON.md  INGESTION_CACHE_WARMUP.md  LICENSE  Makefile  PLACES_SYSTEM_README.md  PRODUCTION_ENV_SETUP.md  README.md  REDIS_REMOVAL_REPORT.md  TESTING_REPORT.md  ai_processed_places_gpt4o_20250827_232219.json  collect_timeout_bangkok.py  collected_places_20250827_215538.json  debug_page_structure.py  debug_things_to_do.py  demo_step8_complete.py  geo_validated_places_20250828_093802.json  load_places_to_db.py  main.py  pyproject.toml  pytest.ini  quality_report_step7.txt  requirements.txt  requirements_step8.txt  setup_env.sh  start_server.sh  test_all_fetchers.py  test_bacc_detailed.py  test_base.py  test_bk_home.py  test_bk_simple.py  test_category_filter.py  (+21 more)
archive/: README.md  debug_places_in_articles.py  debug_timeout_structure.py  dedup_report_step6.txt  demo_step9_integration.py  inspect_timeout_structure.py  process_timeout_places.py  test_bacc_links.py  test_bk_magazine.py  test_debug_categories.py  test_event_keys.py  test_eventbrite_dates.py  test_eventbrite_structure.py  test_filtering.py  test_new_cards.py  test_places_server.py  test_places_web.py  test_ra_detailed.py  test_range_function.py  test_redis_cloud_step8.py  test_step1.py  test_step4.py  test_step8.py  test_timeout.py  test_timeout_parser.py  test_timeout_structure.py  test_universal_fetcher.py  (+1 more)
(+226 files in other folders)
